	* src/RelLib/_Repository.py: new types
	* src/RelLib/_NameType.py: new types
	* src/RelLib/_ChildRefType.py: new types
	* src/DisplayTabs.py: new types
	* src/GrampsWidgets.py: new types
	* src/Utils.py: new types
	* src/Editors/_EditFamily.py: button messages
	* src/DisplayTabs.py: remove property button stuff

2006-04-18  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: Parse old and new XML.
	* src/GrampsDb/_WriteXML.py (dump_child_ref, dump_person_ref): Add
	methods.
	* src/RelLib/_ChildRef.py (ChildRef.set_mother_relation): Adapt to
	new types;
	(ChildRef.set_father_relation): Adapt to new types.
	* src/RelLib/_GrampsType.py (GrampsType.get_custom): Add method.
	(GrampsType.set): Allow setting from the same class instance.
	(GrampsType.is_default): Add method.
	* src/DisplayTabs.py (BackRefList.create_buttons): Allow an
	additional argument to keep the caller happy.

2006-04-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: removal of inversion
	* src/GenericFilter.py: Interface changes for filtering
	* src/Editors/__init__.py: added EditChildRef
	* src/Editors/Makefile.am: added EditChildRef
	* src/Editors/_EditChildRef.py: added
	* src/Editors/_EditFamily.py: add child reference editor
	* src/DisplayTabs.py: add optional properties button
	* src/glade/gramps.glade: add child reference editor
	* src/plugins/Desbrowser.py: bring up to speed with ManagedWindow
	* src/GrampsWidgets.py: fix the type return value 

2006-04-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: handle the dirty flag for updates
	* src/DataViews/_PersonView.py: goto active person properly
	* src/SelectObject.py: scale thumbnails to 1/2 size
	* src/ListModel.py: reduce size of thumbnails
	* src/GrampsDb/_ReadGedcom.py: set author properly for GEDCOM name
	on default source

2006-04-16  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/DescendReport.py: Don't sort children (Bug #1453010)
